--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -16,3 +16,8 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
+        dql:
+            datetime_functions:
+                now: DoctrineExtensions\Query\Mysql\Now
+            numeric_functions:
+                rand: DoctrineExtensions\Query\Mysql\Rand
