--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,5 +25,4 @@ security:
     access_control:
         - { path: ^/(register|login)$, allow_if: "is_anonymous()" }
         - { path: ^/event/new$, roles: ROLE_USER }
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
