--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,6 +2,9 @@ security:
     encoders:
         App\Entity\User: bcrypt
 
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
+
     providers:
         db_provider:
             entity:
