--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,8 @@
 parameters:
     media:
         directory: '%kernel.project_dir%/public/data'         
+    pagination:
+        itemPerPage: 3
 
 services:
     # default configuration for services in *this* file
